[tool.poetry]
name = "sap-bio-chem"
version = "0.1.0"
description = "Python OOP classes that deal with peaks, mz, windows, rt, etc."
authors = ["LucasSapient <lucas.polidori@sapient.bio>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
PyYAML = "^6.0"
pytest = "^7.1.2"
autopep8 = "^1.6.0"
unify = "^0.5"
isort = "^5.10.1"
wemake-python-styleguide = "^0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
